--- a/src/main/resources/templates/list-products.html
+++ b/src/main/resources/templates/list-products.html
@@ -23,7 +23,7 @@
             <td><span th:text="${product.id}"> Id </span></td>
             <td><span th:text="${product.productName}"> Name </span></td>
                 <td><span th:text="${product.description}"> Vendor Name </span></td>
-                  <td><a th:href="@{/product/update/{id}(id=${product.id})}">Update</a></td>
+                  <td><a th:href="@{/product/update/{id}(id=${product.id})}">Update</a> | <a th:href="@{/product/delete/{id}(id=${product.id})}">Delete</a></td>
         </tr>
     </tbody>
 </table>
