--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -750,7 +750,7 @@
 										<div class="fileupload fileupload-new allcp-form"
 											data-provides="fileupload">
 											<div class="fileupload-preview thumbnail mb20">
-												<img th:src="holder.js/100%x140" alt="holder">
+												<img data-src="holder.js/100%x140" alt="holder">
 											</div>
 											<div class="row mhn10">
 												<div class="col-xs-12 col-sm-7 pr5 ph10">
@@ -1290,82 +1290,23 @@
 				<div class="scroller-chute scroller-primary chute-fh-xs mrn">
 					<div class="allcp-form theme-primary">
 
-						<h5 class="pln">Find Users</h5>
-
-						<h6 class="mb15">by ID</h6>
-
+						<h5 class="pln">Find Customer</h5>
+						<form th:action="@{/customer/list}" method="Get">
 						<div class="section mb20">
-							<label for="customer-id" class="field prepend-icon"> <input
-								type="text" name="customer-id" id="customer-id"
-								class="gui-input" placeholder="ID #"> <span
+							<label for="customer-name" class="field prepend-icon">
+							 <input type="text" name="search" id="search"
+								class="gui-input" th:value="${search}"  placeholder="Username,Email..."> <span
 								class="field-icon"> <i class="fa fa-user"></i>
 							</span>
 							</label>
 						</div>
-
-						<h6 class="mb15">by name</h6>
-
-						<div class="section mb20">
-							<label for="customer-name" class="field prepend-icon"> <input
-								type="text" name="customer-name" id="customer-name"
-								class="gui-input" placeholder="Name"> <span
-								class="field-icon"> <i class="fa fa-user"></i>
-							</span>
-							</label>
-						</div>
-						<h6 class="mb15">by email</h6>
-
-						<div class="section mb20">
-							<label for="customer-email" class="field prepend-icon"> <input
-								type="text" name="customer-email" id="customer-email"
-								class="gui-input" placeholder="Email"> <span
-								class="field-icon"> <i class="fa fa-envelope-o"></i>
-							</span>
-							</label>
-						</div>
-
-						<h6 class="mb15">by country</h6>
-
-						<div class="section mb20">
-							<label class="field select"> <select
-								id="customer-location" name="customer-location">
-									<option value="0" selected="selected">Location</option>
-									<option value="1">USA</option>
-									<option value="2">Canada</option>
-									<option value="3">France</option>
-									<option value="4">China</option>
-									<option value="4">Spain</option>
-							</select> <i class="arrow double"></i>
-							</label>
-						</div>
-
-						<h6 class="mb15">by date</h6>
-
-						<div class="section row mb20">
-							<div class="col-md-12 ph5">
-								<label for="datepicker1" class="field prepend-icon"> <input
-									type="text" id="datepicker1" name="datepicker1"
-									class="gui-input fs13" placeholder="From"> <span
-									class="field-icon"> <i class="fa fa-calendar"></i>
-								</span>
-								</label>
-							</div>
-							<div class="col-md-12 ph5">
-								<label for="datepicker2" class="field prepend-icon"> <input
-									type="text" id="datepicker2" name="datepicker2"
-									class="gui-input fs13" placeholder="To"> <span
-									class="field-icon"> <i class="fa fa-calendar"></i>
-								</span>
-								</label>
-							</div>
-						</div>
-
+						
 						<hr class="short">
-
 						<div class="section clr pb30">
-							<button class="btn btn-primary pull-right ph30" type="button">Search</button>
+							<button class="btn btn-primary pull-right ph30" type="submit">Search</button>
 						</div>
-
+						
+						</form>
 					</div>
 				</div>
 			</aside>
@@ -1379,177 +1320,51 @@
 					<div class="panel-menu allcp-form theme-primary mtn">
 						<div class="row">
 							<div class="col-md-6">
-								<label class="field select"> <select
-									id="filter-purchases" name="filter-purchases">
-										<option value="0">Filter by Purchases</option>
-										<option value="1">1-49</option>
-										<option value="2">50-499</option>
-										<option value="1">500-999</option>
-										<option value="2">1000+</option>
-								</select> <i class="arrow double"></i>
-								</label>
-							</div>
-							<div class="col-md-6">
-								<label class="field select"> <select id="filter-group"
-									name="filter-group">
-										<option value="0">Filter by Group</option>
-										<option value="1">Clients</option>
-										<option value="2">Vendors</option>
-										<option value="3">Distributors</option>
-										<option value="4">Employees</option>
-								</select> <i class="arrow double"></i>
-								</label>
+								<h5 class="pln"  >List Customers</h5>
 							</div>
 						</div>
 					</div>
 					<div class="panel-body pn">
 						<div class="table-responsive">
+						<a th:href = "@{/createCustomer}" class="btn btn-primary btn-sm mb-3">Create Customer</a>
 							<table
 								class="table allcp-form theme-warning tc-checkbox-1 btn-gradient-grey fs13">
 								<thead>
 									<tr class="">
-										<th class="text-center">Select</th>
+										
 										<th class="">Name</th>
 										<th class="">Email</th>
-										<th class="">Group</th>
-										<th class="">Registered</th>
-										<th class="">Purchases</th>
+										
+										<th class="">Phone Number</th>
 										<th class="">Total Spent</th>
+										<th class="">Membership</th>
+										<th class="">Status</th>
 
 									</tr>
 								</thead>
 								<tbody>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">John Doe</td>
-										<td class="">mail@mail.com</td>
-										<td class="">Clients</td>
-										<td class="">11/01/2015</td>
-										<td class="">5</td>
-										<td class="">$1,000</td>
-									</tr>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">Jane Doe</td>
-										<td class="">trash@mail.com</td>
-										<td class="">Clients</td>
-										<td class="">11/01/2015</td>
-										<td class="">13</td>
-										<td class="">$15,885</td>
-									</tr>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">Doublas Abrams</td>
-										<td class="">da@mail.com</td>
-										<td class="">Clients</td>
-										<td class="">11/01/2015</td>
-										<td class="">13</td>
-										<td class="">$13,999</td>
-									</tr>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">Abram Douglas</td>
-										<td class="">ad@mail.com</td>
-										<td class="">Vendors</td>
-										<td class="">11/01/2015</td>
-										<td class="">10</td>
-										<td class="">$20,300</td>
-									</tr>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">Nesli Lislen</td>
-										<td class="">trash@mail.com</td>
-										<td class="">Distributors</td>
-										<td class="">11/01/2015</td>
-										<td class="">148</td>
-										<td class="">$230,600</td>
-									</tr>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">Kira Soul</td>
-										<td class="">ksoul@mail.com</td>
-										<td class="">Employes</td>
-										<td class="">11/01/2015</td>
-										<td class="">3</td>
-										<td class="">$1,200</td>
-									</tr>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">Abram Douglas</td>
-										<td class="">ad@mail.com</td>
-										<td class="">Vendors</td>
-										<td class="">11/01/2015</td>
-										<td class="">06</td>
-										<td class="">$1,400</td>
-									</tr>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">Jane Doe</td>
-										<td class="">trash@mail.com</td>
-										<td class="">Distributors</td>
-										<td class="">11/01/2015</td>
-										<td class="">16</td>
-										<td class="">$4,200</td>
-									</tr>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">Then Hven</td>
-										<td class="">nyam@mail.com</td>
-										<td class="">Employes</td>
-										<td class="">11/01/2015</td>
-										<td class="">1</td>
-										<td class="">$500</td>
-									</tr>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">Kefi Ranet</td>
-										<td class="">net@mail.com</td>
-										<td class="">Clients</td>
-										<td class="">11/01/2015</td>
-										<td class="">10</td>
-										<td class="">$15,100</td>
-									</tr>
-									<tr>
-										<td class="text-center"><label class="option block mn">
-												<input type="checkbox" name="inputname" value="FR">
-												<span class="checkbox mn"></span>
-										</label></td>
-										<td class="">John Doe</td>
-										<td class="">mail@mail.com</td>
-										<td class="">Clients</td>
-										<td class="">11/01/2015</td>
-										<td class="">12</td>
-										<td class="">$8,555</td>
+									<tr th:each="tempCustomer : ${customer}">
+										
+										<td class="" th:text="${tempCustomer.customer_name}"></td>
+										<td class="" th:text="${tempCustomer.customer_email}"></td>
+									
+										<td class="" th:text="${tempCustomer.customer_phone}"></td>
+										<td class="" th:text="${tempCustomer.total_expense}"></td>
+										<td class="" ><span th:text="${tempCustomer.membership.membership_name}"></span></td>
+										
+										<td class="">
+												<div class="btn-group text-right">
+												<button type="button"
+												class="btn btn-info br2 btn-xs fs10 fw700 dropdown-toggle"
+												data-toggle="dropdown" aria-expanded="false">
+															Action <span class="caret"></span>
+												</button>
+												<ul class="dropdown-menu" role="menu">
+												<li><a th:href="@{/customer/editCustomer/{id}(id=${tempCustomer.customer_id})}" class="btn btn-primary btn-sm mb-3">Edit</a></li>
+												<li><a  th:href="@{/customer/deleteCustomer/{id}(id=${tempCustomer.customer_id})}" class="btn btn-danger btn-sm mb-3">Delete</a></li>
+												</ul>
+												</div>
+										</td>						
 									</tr>
 								</tbody>
 							</table>
