--- a/src/main/resources/templates/product-form.html
+++ b/src/main/resources/templates/product-form.html
@@ -92,7 +92,9 @@
 										</li>
 										<li><a href="#tab1_2" data-toggle="tab">Details</a></li>
 									</ul> -->
+
 								</div>
+								<i th:text="${message}" style="color: orangered"></i>
 								<div class="panel-body pn">
 									<div class="tab-content pn br-n allcp-form theme-primary">
 										<div id="tab1_1" class="tab-pane active">
