--- a/src/main/resources/templates/edit-customer.html
+++ b/src/main/resources/templates/edit-customer.html
@@ -88,7 +88,7 @@
 									</div>
 									<div class="panel-body">
 
-										<form class="form-horizontal" action="#" th:action="@{/customer/saveCustomer}" th:object="${customer}" method="POST">
+										<form class="form-horizontal" action="#" th:action="@{/admin/customer/saveCustomer}" th:object="${customer}" method="POST">
 										
 											
 														<input type="hidden" th:field="*{customer_id}" id="id" class="form-control">
@@ -107,7 +107,7 @@
 
 												<div class="col-lg-8">
 													<div class="bs-component">
-														<input type="text" th:field="*{customer_email}" id="email" class="form-control" readonly="readonly">
+														<input type="text" th:field="*{customerEmail}" id="email" class="form-control" readonly="readonly">
 													</div>
 												</div>
 											</div>
@@ -131,6 +131,15 @@
 												</div>
 											</div>
 											<div class="form-group">
+												<label for="password" class="col-lg-3 control-label">Email</label>
+
+												<div class="col-lg-8">
+													<div class="bs-component">
+														<input type="text" th:field="*{customer_adress}" id="email" class="form-control" readonly="readonly">
+													</div>
+												</div>
+											</div>
+											<div class="form-group">
 												<label for="total expense" class="col-lg-3 control-label">Total expense</label>
 
 												<div class="col-lg-8">
@@ -147,13 +156,27 @@
               										  <input type="radio" th:id="${tempMembership.membership_id}" th:name="${tempMembership.membership_id}" class="custom-control-input" th:value="${tempMembership.membership_id}" th:field="*{membership.membership_id}">
               										  <label class="custom-control-label" th:for="${tempMembership.membership_id}"><p th:text="${tempMembership.membership_name}"></p></label>
            										 </div>
-												
-           								</th:block>
+             								</th:block>
            									 </div>
-												
-												
 											</div>
-											
+											<div class="form-group">
+												<label for="total expense" class="col-lg-3 control-label">Authority</label>
+												
+												 <div class="custom-control custom-radio custom-control-inline">
+              										  <input type="radio" id="ROLE" name="ROLE" class="custom-control-input" value="ROLE_CUSTOMER" th:field="*{authority}">
+              										  <label class="custom-control-label" for="option1">Active</label>
+           										 </div>
+           										 <div class="custom-control custom-radio custom-control-inline">
+              										  <input type="radio" id="NULL" name="NULL" class="custom-control-input" value="NULL" th:field="*{authority}">
+              										  <label class="custom-control-label" for="option2">Inactive</label>
+           										 </div>
+
+												<!-- <div class="col-lg-8">
+													<div class="bs-component">
+														<input type="text" th:field="*{authority}" id="total_expense" class="form-control">
+													</div>
+												</div> -->
+											</div>
 											
 											
 											<div class="form-group">
