--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -44,7 +44,7 @@
                             </a>
                         </li>
                         <li class="">
-                            <a th:href="@{/customer/list}">
+                            <a th:href="@{/admin/customer/list}">
                                 Clients 
                             </a>
                         </li>
@@ -65,7 +65,7 @@
                 </li>
                 
                  <li>
-                    <a th:href="@{/membership/list}">
+                    <a th:href="@{/admin/membership/list}">
                         <span class="caret"></span>
                         <span class="sb-menu-icon fa fa-check-square-o"></span>
                         <span class="sidebar-title">MemberShip</span>
@@ -346,7 +346,7 @@
                             </a>
                         </li>
                         <li th:class="${activeClients}" class="">
-                            <a th:href="@{/customer/list}">
+                            <a th:href="@{/admin/customer/list}">
                                 <i class="fa fa-group"></i>
                                 <span>Clients</span>
                             </a>
