--- a/src/main/resources/templates/user-access-denied.html
+++ b/src/main/resources/templates/user-access-denied.html
@@ -18,7 +18,7 @@
 
 <!-- Angular material -->
 <link rel="stylesheet" type="text/css"
-	th:href="@{skin/css/angular-material.min.css}">
+	th:href="@{/skin/css/angular-material.min.css}">
 
 <!-- Icomoon -->
 <link rel="stylesheet" type="text/css"
@@ -26,19 +26,24 @@
 
 <!-- AnimatedSVGIcons -->
 <link rel="stylesheet" type="text/css"
-	th:href="@{/fonts/animatedsvgicons/css/codropsicons.css}">
+	href="@{/fonts/animatedsvgicons/css/codropsicons.css}">
+
+<!-- c3charts -->
+<link rel="stylesheet" type="text/css"
+	th:href="@{/js/plugins/c3charts/c3.min.css}">
 
 <!-- CSS - allcp forms -->
 <link rel="stylesheet" type="text/css"
 	th:href="@{/allcp/forms/css/forms.css}">
 
-<!-- Plugins -->
+<!-- mCustomScrollbar -->
 <link rel="stylesheet" type="text/css"
 	th:href="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.min.css}">
 
 <!-- CSS - theme -->
 <link rel="stylesheet" type="text/css"
 	th:href="@{/skin/default_skin/less/theme.css}">
+
 
 <!-- IE8 HTML5 support -->
 <!--[if lt IE 9]>
@@ -63,56 +68,32 @@
 			<!-- Content -->
 			<section id="content">
 
-				<!-- Login Form -->
-				<div class="allcp-form theme-primary mw320" id="login">
-					<div class="bg-primary mw600 text-center mb20 br3 pt15 pb10">
+				<div class="center-block mt70" style="max-width: 450px">
+
+					<div class="bg-danger text-center mb20 br3 pt15 pb10">
 						<img th:src="@{/img/logo.png}" alt="" />
 					</div>
-					<div class="panel mw320">
+					<div class="panel panel-danger mt15">
+						<div class="panel-heading pn">
+							<div class="panel-title">Access Denied!!</div>
+						</div>
+						<div class="panel-body pn pt30 pbn">
 
-						<form method="POST" th:action="@{/admin/authenticateTheUser}"
-							id="form-login">
-							<div class="panel-body pn mv10">
 
-								<div class="section">
-									<label for="username" class="field prepend-icon"> <input
-										type="text" name="username" id="username" class="gui-input"
-										placeholder="Username"> <span class="field-icon">
-											<i class="fa fa-user"></i>
-									</span>
-									</label>
-								</div>
-								<!-- /section -->
+							<p class="dropcap dropcap-danger">
+								Your account does not have permission to access this page. <br />Please
+								log in or contact IT support.
+							</p>
 
-								<div class="section">
-									<label for="password" class="field prepend-icon"> <input
-										type="password" name="password" id="password"
-										class="gui-input" placeholder="Password"> <span
-										class="field-icon"> <i class="fa fa-lock"></i>
-									</span>
-									</label>
-								</div>
-								<!-- /section -->
+							<p class="text-right mt20">
+								<a th:href="@{/showMyLoginPage}" class="btn btn-success ph40"
+									type="button">SIGN IN</a>
+							</p>
 
-								<div class="section">
-									<div class="bs-component pull-left pt5">
-										<div class="radio-custom radio-primary mb5 lh25">
-											<input type="radio" id="remember" name="remember"> <label
-												for="remember">Remember me</label>
-										</div>
-									</div>
-									<input type="submit" name="submit"
-										class="btn btn-bordered btn-primary pull-right" value="Log In" />
-								</div>
-								<!-- /section -->
-
-							</div>
-							<!-- /Form -->
-						</form>
+						</div>
 					</div>
-					<!-- /Panel -->
+
 				</div>
-				<!-- /Spec Form -->
 
 			</section>
 			<!-- /Content -->
@@ -125,7 +106,7 @@
 
 
 
-	<!-- Scripts -->
+
 	<!-- Scripts -->
 
 	<!-- jQuery -->
@@ -151,13 +132,13 @@
 
 	<!-- Theme Scripts -->
 	<script th:src="@{/js/utility/utility.js}"></script>
-	<script th:src="@{/js/demo/widgets_sidebar.js}"></script>
 	<script th:src="@{/js/demo/demo.js}"></script>
 	<script th:src="@{/js/main.js}"></script>
+	<script th:src="@{/js/demo/widgets_sidebar.js}"></script>
+
 	<script th:src="@{/js/pages/dashboard_init.js}"></script>
 
 	<!-- /Scripts -->
-
 
 </body>
 
