jasper report update

--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -1307,6 +1307,7 @@
 						</div>
 						
 						</form>
+						<a href="/admin/customer/reportCustomer" class="btn btn-info" role="button">Report Customer</a>
 					</div>
 				</div>
 			</aside>
