--- a/src/main/resources/templates/guest/detail-Customer.html
+++ b/src/main/resources/templates/guest/detail-Customer.html
@@ -118,6 +118,14 @@
 													</div>
            									 </div>
 											</div>
+											<div class="container-login100-form-btn">
+												<div class="wrap-login100-form-btn">
+													<div class="login100-form-bgbtn"></div>
+													<button class="login100-form-btn">
+														Update Profile
+													</button>
+												</div>
+											</div>
 											
 										</form>
 	
