--- a/src/main/resources/templates/guest/cart.html
+++ b/src/main/resources/templates/guest/cart.html
@@ -45,10 +45,9 @@
 			<div class="row height align-items-center justify-content-center">
 				<div class="col-lg-10">
 					<div class="generic-banner-content">
-						<h2 class="text-white">The Generic Page</h2>
+						<h2 class="text-white">Cart</h2>
 						<p class="text-white">
-							It won’t be a bigger problem to find one video game lover in your
-							<br> neighbor. Since the introduction of Virtual Game.
+							Please check before check out
 						</p>
 					</div>
 				</div>
