--- a/src/main/resources/templates/guest/change-Customer.html
+++ b/src/main/resources/templates/guest/change-Customer.html
@@ -55,7 +55,7 @@
 
 	<!-- #header -->
 
-	<section id="content_wrapper">
+	<section class="menu-area section-gap" id="coffee">
 
 			<div id="canvas-wrapper">
 				<canvas id="demo-canvas"></canvas>
