--- a/src/main/resources/templates/guest/index.html
+++ b/src/main/resources/templates/guest/index.html
@@ -38,6 +38,7 @@
 <link rel="stylesheet" type="text/css"
 	th:href="@{/allcp/forms/css/forms.css}">
 
+<link th:rel="stylesheet" type="text/css" th:href="@{/skin/css/star-rating.css}">
 </head>
 
 <body>
@@ -150,28 +151,41 @@
 					
 	<div class="container">
 			   <div class="row height align-items-center">
+			      <div class="text-center col-lg-12">
+			      <span class="label-input100">Rating</span>
+						<input class="rating" name="rating"  required="required" type="hidden" readonly th:value="${avgRating}" data-glyphicon="0">
+				  </div>
+			   	
+						
 					<div class="col-lg-6" th:each="tempReview : ${review}" >
-   							<h6><span th:text="${tempReview.email}"></span></h6>
+   							<h6><span th:text="${tempReview.customer.customerEmail}"></span></h6>
   							<span th:text="${tempReview.content}"></span>
+  									<input class="rating" name="rating"  required="required" type="hidden" readonly th:value="${tempReview.rating}" data-glyphicon="0">
   							Date:<span class="unit" th:text="${tempReview.date}"></span>
 					</div>
 				<br>
-				<div class="col-lg-6 video-left">
-				<form class="login100-form validate-form"  th:action="@{/saveReview}" th:object="${review}" >
+				
+				
+				<div class="text-center col-lg-12">
+				<form class="login100-form validate-form"  th:action="@{/saveReview}" th:object="${review}"  sec:authorize="isAuthenticated()">
 				<i th:text="${message}"></i>
-					 <div class="wrap-input100 validate-input" data-validate="Email is required">
-						<span class="label-input100">Full Email</span>
-						<input class="input100" type="text" name="email"  required="required"  placeholder="Email...">
+					 
+						<th:block th:each="tempCustomer:${customer}">
+												 <div class="custom-control custom-radio custom-control-inline">
+              										   <input th:id="${tempCustomer.customer_id}" th:name="${tempCustomer.customer_id}" class="custom-control-input" th:value="${tempCustomer.customer_id}" th:field="*{customer.customer_id}">
+              										  <label class="custom-control-label" th:for="${tempCustomer.customer_id}"><p th:text="${tempCustomer.customerEmail}"></p></label>
+           										 </div>
+             			</th:block>
 						
-					</div> 
-					<div class="wrap-input100 validate-input" data-validate="Name is required">
+					
+					<div class="wrap-input100 validate-input" data-validate="Content is required">
 						<span class="label-input100">Content</span>
 						<input class="input100" type="text" name="content"  required="required"  placeholder="Content...">
 						
 					</div>
 					<div class="wrap-input100 validate-input">
 						<span class="label-input100">Rating</span>
-						<input class="rating" name="rating"  required="required" type="hidden" >
+						<input class="rating" name="rating"  required="required" type="hidden" value="0" data-glyphicon="0" >
 						
 					</div>
 					<div class="container-login100-form-btn">
@@ -183,6 +197,13 @@
 						</div>
 					</div>
 				</form>
+				<div class="wrap-login100-form-btn">
+							<div class="login100-form-bgbtn"></div>
+							<a th:href="@{/reviewAll}" class="login100-form-btn">
+							Review All
+							
+						</a>
+						</div>
 				</div>
 		
 			
@@ -233,16 +254,8 @@
 		<script th:src="@{/js/jquery.counterup.min.js}"></script>
 		<script th:src="@{/js/mail-script.js}"></script>
 		<script th:src="@{/js/main.js}"></script>
-		<script>
-			function (){
-				$("rating").starRating({
-					  rating: 0,
-					  numStars: 5,
-					  maxValue: 5,
-					  halfStar: true
-					});
-			};
-		</script>
+		
+		<script th:src="@{/stars/star-rating.min.js}"></script>
 		
 </body>
 
