--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
 <!-- CSS - theme -->
 <link rel="stylesheet" type="text/css"
 	th:href="@{/skin/default_skin/less/theme.css}">
-
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
 <!-- IE8 HTML5 support -->
 <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
@@ -100,8 +100,9 @@
 	<!-- Scripts -->
 
 	<!-- jQuery -->
-	<script th:src="@{/js/jquery/jquery-1.12.3.min.js}"></script>
-	<script th:src="@{/js/jquery/jquery_ui/jquery-ui.min.js}"></script>
+	<script th:src="@{http://code.jquery.com/jquery-2.1.1.min.js}"></script>
+	<script src="//datatables.net/download/build/nightly/jquery.dataTables.js"></script>
+	<script th:src="@{/js/utility/bootstrap/bootstrap.min.js}"></script>
 
 	<!-- AnimatedSVGIcons -->
 	<script th:src="@{/fonts/animatedsvgicons/js/snap.svg-min.js}"></script>
@@ -109,32 +110,12 @@
 	<script th:src="@{/fonts/animatedsvgicons/js/svgicons.js}"></script>
 	<script th:src="@{/fonts/animatedsvgicons/js/svgicons-init.js}"></script>
 
-	<!-- Scroll -->
-	<script
-		th:src="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.concat.min.js}"></script>
-	<!-- HighCharts Plugin -->
-	<script th:src="@{/js/plugins/highcharts/highcharts.js}"></script>
-
-	<!-- Plugins -->
-	<script th:src="@{/js/plugins/c3charts/d3.min.js}"></script>
-	<script th:src="@{/js/plugins/c3charts/c3.min.js}"></script>
-	<script th:src="@{/js/plugins/circles/circles.js}"></script>
-
-	<!-- Jvectormap JS -->
-	<script th:src="@{/js/plugins/jvectormap/jquery.jvectormap.min.js}"></script>
-	<script
-		th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-us-lcc-en.js}"></script>
-	<script
-		th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-world-mill-en.js}"></script>
-	<!-- Theme Scripts -->
-	<script th:src="@{/js/utility/utility.js}"></script>
-	<script th:src="@{/js/demo/demo.js}"></script>
-	<script th:src="@{/js/main.js}"></script>
-	<script th:src="@{/js/demo/widgets_sidebar.js}"></script>
-	<script th:src="@{/js/pages/dashboard2.js}"></script>
-	<script th:src="@{/js/demo/charts/highcharts.js}"></script>
 	<!-- /Scripts -->
-
+	<script>
+		$(document).ready(function() {
+			$('#myTable').DataTable();
+		})
+	</script>
 </body>
 
 </html>
