--- a/src/main/resources/templates/list-inventory.html
+++ b/src/main/resources/templates/list-inventory.html
@@ -42,7 +42,7 @@
 <!-- CSS - theme -->
 <link rel="stylesheet" type="text/css"
 	th:href="@{/skin/default_skin/less/theme.css}">
-
+	<link href="//datatables.net/download/build/nightly/jquery.dataTables.css" rel="stylesheet" type="text/css" />
 <!-- IE8 HTML5 support -->
 <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
@@ -92,21 +92,23 @@
 
 										<div class="panel-body pn mt15">
 											<div class="table-responsive">
-												<table
-													class="table allcp-form theme-warning tc-checkbox-1 table-style-2 btn-gradient-grey fs13">
+												<table id="myTable"
+													class="table-responsive">
 													<thead>
 														<tr class="">
+															<th>No.</th>
 															<th class="">Ingredient Name</th>
 															<th class="">Vendor Name</th>
-															<th class="">UMO</th>
+															<th class="">Unit</th>
 															<th class="">Stock</th>
 
 															<th class="">Action</th>
 														</tr>
 													</thead>
 													<tbody>
-														<tr th:each="temp : ${inventory}">
+														<tr th:each="temp,stat : ${inventory}">
 
+															<td th:text="${stat.count}"></td>
 															<td class="" th:text="${temp.ingredient.ingredientName}"></td>
 															<td class="" th:text="${temp.vendorName}"></td>
 															<td class="" th:text="${temp.uMO}"></td>
@@ -142,6 +144,28 @@
 
 						</div>
 						<!-- /Column Center -->
+						<div class="chute chute-right pbn">
+							<div class="row mn">
+								<div class="col-xs-12">
+									<div class="panel">
+										<div class="panel-heading ">
+											<span class="panel-title ptn">Unmanaged Ingredients</span>
+										</div>
+										<div class="panel-body pn mt15">
+											<div class="table-responsive">
+												<th:block th:if="${unmanagedinventory}">
+													<div class="row" th:each="temp:${unmanagedinventory}">
+														<div class="col-xs-6"><p th:text="${temp.ingredient.ingredientName}"></p></div>
+														<div class="col-xs-6"><a href="#">Manage</a></div>
+
+													</div>
+												</th:block>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
 				<!-- /Content -->
@@ -167,8 +191,9 @@
 	<!-- Scripts -->
 
 	<!-- jQuery -->
-	<script th:src="@{/js/jquery/jquery-1.12.3.min.js}"></script>
-	<script th:src="@{/js/jquery/jquery_ui/jquery-ui.min.js}"></script>
+	<script th:src="@{http://code.jquery.com/jquery-2.1.1.min.js}"></script>
+	<script src="//datatables.net/download/build/nightly/jquery.dataTables.js"></script>
+	<script th:src="@{/js/utility/bootstrap/bootstrap.min.js}"></script>
 
 	<!-- AnimatedSVGIcons -->
 	<script th:src="@{/fonts/animatedsvgicons/js/snap.svg-min.js}"></script>
@@ -176,32 +201,12 @@
 	<script th:src="@{/fonts/animatedsvgicons/js/svgicons.js}"></script>
 	<script th:src="@{/fonts/animatedsvgicons/js/svgicons-init.js}"></script>
 
-	<!-- Scroll -->
-	<script
-		th:src="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.concat.min.js}"></script>
-	<!-- HighCharts Plugin -->
-	<script th:src="@{/js/plugins/highcharts/highcharts.js}"></script>
-
-	<!-- Plugins -->
-	<script th:src="@{/js/plugins/c3charts/d3.min.js}"></script>
-	<script th:src="@{/js/plugins/c3charts/c3.min.js}"></script>
-	<script th:src="@{/js/plugins/circles/circles.js}"></script>
-
-	<!-- Jvectormap JS -->
-	<script th:src="@{/js/plugins/jvectormap/jquery.jvectormap.min.js}"></script>
-	<script
-		th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-us-lcc-en.js}"></script>
-	<script
-		th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-world-mill-en.js}"></script>
-	<!-- Theme Scripts -->
-	<script th:src="@{/js/utility/utility.js}"></script>
-	<script th:src="@{/js/demo/demo.js}"></script>
-	<script th:src="@{/js/main.js}"></script>
-	<script th:src="@{/js/demo/widgets_sidebar.js}"></script>
-	<script th:src="@{/js/pages/dashboard2.js}"></script>
-	<script th:src="@{/js/demo/charts/highcharts.js}"></script>
 	<!-- /Scripts -->
-
+	<script>
+		$(document).ready( function () {
+			$('#myTable').DataTable();
+		} );
+	</script>
 
 </body>
 
