--- a/src/main/resources/templates/guest/forgot-password-form.html
+++ b/src/main/resources/templates/guest/forgot-password-form.html
@@ -61,44 +61,31 @@
 						<img th:src="@{/img/logo1.png}" alt="" />
 					</div>
 					<div class="panel mw320">
-					<p th:if="${loginError}" style="color:red;">Wrong email or password</p>
-						<i th:text="${message}"></i>
-						<form name='login-form' th:action="@{/authenticateTheCustomer}" method='POST'>
+					<div>
+						<h3>Forgot Password</h3>
+					</div>
+					<div th:if="${error != null}">
+    					<p class="text-danger">[[${error}]]</p>
+					</div>
+					<div th:if="${message != null}">
+    					<p class="text-warning">[[${message}]]</p>
+					</div>
+						<form name='login-form' th:action="@{/forgot_password}" method='POST'>
+								 <div>
+       								 <p>We will be sending a reset password link to your email.</p>
+   								 </div>
+							
 								<div class="section">
-									<label for="username" class="field prepend-icon"> <input
-										type="text" name="username" id="username" class="gui-input"
-										placeholder="Email..." required="required"> <span class="field-icon">
+									<label for="email" class="field prepend-icon"> <input
+										type="email" name="email" id="username" class="gui-input"
+										placeholder="Enter your E-mail" required="required"> <span class="field-icon">
 											<i class="fa fa-user"></i>
 									</span>
 									</label>
 								</div>
-								<!-- /section -->
-
 								<div class="section">
-									<label for="password" class="field prepend-icon"> <input
-										type="password" name="password" id="password"
-										class="gui-input" placeholder="Password..." required="required"> <span
-										class="field-icon"> <i class="fa fa-lock"></i>
-									</span>
-									</label>
-								</div>
-								<!-- /section -->
-
-								<div class="section">
-										<a style="color: blue;" th:href="@{/regiter}" > Create a New Account</a>
-										<br>
-										<a th:href="@{/forgot_password}">Forgot your password?</a>
-										<div class="radio-custom radio-primary mb5 lh25">
-											<input type="checkbox" id="remember_me" name="remember_me"> <label
-												for="remember_me">Remember me</label>
-										</div>
-									
 									<input type="submit" name="submit"
-										class="btn btn-bordered btn-primary " value="Log In" />
-									
-										<h3>Or With</h3>
-                                    <p><a href="/oauth2/authorize/google"><img src="http://pngimg.com/uploads/google/google_PNG19635.png" style="height:60px"></a></p>
-                                
+										class="btn btn-bordered btn-primary " value="Send" />
 								</div>
 								
 								
