--- a/src/main/resources/templates/guest/reset-password-form.html
+++ b/src/main/resources/templates/guest/reset-password-form.html
@@ -61,44 +61,32 @@
 						<img th:src="@{/img/logo1.png}" alt="" />
 					</div>
 					<div class="panel mw320">
-					<p th:if="${loginError}" style="color:red;">Wrong email or password</p>
-						<i th:text="${message}"></i>
-						<form name='login-form' th:action="@{/authenticateTheCustomer}" method='POST'>
-								<div class="section">
-									<label for="username" class="field prepend-icon"> <input
-										type="text" name="username" id="username" class="gui-input"
-										placeholder="Email..." required="required"> <span class="field-icon">
-											<i class="fa fa-user"></i>
-									</span>
-									</label>
-								</div>
-								<!-- /section -->
-
+					<div>
+						<h3>Reset Your Password</h3>
+					</div>
+					
+						<form name='login-form' th:action="@{/reset_password}" method='POST'>
+								<input type="hidden" name ="token" th:value="${token}"/>
+							
 								<div class="section">
 									<label for="password" class="field prepend-icon"> <input
 										type="password" name="password" id="password"
-										class="gui-input" placeholder="Password..." required="required"> <span
+										class="gui-input" placeholder="Enter Your New Password" required="required"> <span
 										class="field-icon"> <i class="fa fa-lock"></i>
 									</span>
 									</label>
 								</div>
-								<!-- /section -->
-
 								<div class="section">
-										<a style="color: blue;" th:href="@{/regiter}" > Create a New Account</a>
-										<br>
-										<a th:href="@{/forgot_password}">Forgot your password?</a>
-										<div class="radio-custom radio-primary mb5 lh25">
-											<input type="checkbox" id="remember_me" name="remember_me"> <label
-												for="remember_me">Remember me</label>
-										</div>
-									
+									<label for="password" class="field prepend-icon"> <input
+										type="password" name="confirmpssword" id="confirmpssword"
+										class="gui-input" placeholder="Confirm Your New Password" required="required" autofocus oninput="checkPasswordMatch(this);"/> 
+										<span class="field-icon"> <i class="fa fa-lock"></i>
+									</span>
+									</label>
+								</div>
+								<div class="section">
 									<input type="submit" name="submit"
-										class="btn btn-bordered btn-primary " value="Log In" />
-									
-										<h3>Or With</h3>
-                                    <p><a href="/oauth2/authorize/google"><img src="http://pngimg.com/uploads/google/google_PNG19635.png" style="height:60px"></a></p>
-                                
+										class="btn btn-bordered btn-primary " value="Change Password" />
 								</div>
 								
 								
@@ -139,5 +127,15 @@
 	<script th:src="@{/js/mail-script.js}"></script>
 	<script th:src="@{/js/main.js}"></script>
 	<script th:src="@{/js/cart.js}"></script>
+	<script type="text/javascript">
+		function checkPasswordMatch(fieldConfirmPassword){
+			if (fieldConfirmPassword.value != $("#password").val()){
+				fieldConfirmPassword.setCustomValidity("Password do not match!");
+			}else{
+				fieldConfirmPassword.setCustomValidity("");
+			}
+		}
+	</script>
+	
 </body>
 </html>
