--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -16,6 +16,11 @@
 
            
                 <li class="">
+                        <li class="active"><a class="accordion-toggle"
+					th:href="@{/admin/showChart/list}"> <span class="caret"></span>
+						<span class="sb-menu-icon fa fa-dashboard"></span> <span
+						class="sidebar-title">Dashboards</span>
+				</a></li>
                     <a class="accordion-toggle" href="#">
                         <span class="caret"></span>
                         <span class="sb-menu-icon fa fa-bar-chart-o"></span>
@@ -91,6 +96,10 @@
     
          <div class="content-left" th:fragment="leftcontent">
                                         <ul class="nav nav-content">
+                                                <li th:class="${activeDashboard}" class=""><a
+				th:href="@{/admin/showChart/list}"> <i
+					class="sb-menu-icon fa fa-dashboard"></i> <span>Dashboard</span>
+			</a></li>
                         <li class="" th:class="${activeSales}">
                             <a th:href="@{/admin/product/list}">
                                 <i class="fa fa-folder"></i>
